Improve tabbing with tabindex and rearranging HTML, fix contrast errors

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,5 @@
 * {
-  color: #272727;
+  color: #141301;
   font-family: 'Alegreya Sans', sans-serif;
 }
 
@@ -12,35 +12,35 @@ body {
 }
 
 .light-text {
-  color: #FCFAF9;
+  color: #E5E7E6;
 }
 
 .primary-color-text {
-  color: #5897fb;
+  color: #38618C;
 }
 
 .accent-color-text {
-  color: #F64740;
+  color: #B80C09;
 }
 
 .light-bg {
-  background-color: #EBEBEB;
+  background-color: #E5E7E6;
 }
 
 .dark-bg {
-  background-color: #272727;
+  background-color: #141301;
 }
 
 .medium-bg {
-  background-color: #C0C0C0;
+  background-color: #B7B5B3;
 }
 
 .primary-bg {
-  background-color: #5897fb;
+  background-color: #38618C;
 }
 
 .accent-bg {
-  background-color: #F64740;
+  background-color: #B80C09;
 }
 
 .primary-button {
@@ -132,7 +132,7 @@ main {
 .card {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   border-radius: 6px;
-  background-color: #EBEBEB;
+  background-color: #E5E7E6;
   padding: 22px;
   display: flex;
   flex-direction: column;
@@ -147,6 +147,8 @@ main {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 1px solid #1413013b;
+  padding-bottom: 16px;
 }
 
 .bookings-header-right {
@@ -156,7 +158,13 @@ main {
 
 .new-booking-toolbar {
   display: flex;
+  justify-content: flex-start;
   gap: 10px;
+  margin-top: 16px;
+}
+
+.test {
+  background-color: #141301;
 }
 
 input {
@@ -169,8 +177,24 @@ input {
   width: 100px;
 }
 
+.ss-main {
+  width: auto;
+}
+
+.datepicker-cell.selected {
+  background-color: #38618C;
+}
+
+.datepicker-cell.selected:hover {
+  background-color: #38618C;
+}
+
+.datepicker-cell.prev:not(.disabled),
+.datepicker-cell.next:not(.disabled) {
+  color: hsl(0deg, 0%, 45%);
+}
+
 .bookings-list {
-  margin-top: 16px;
   width: calc(100% + 8px);
   overflow-y: auto;
   padding-right: 8px;
@@ -196,14 +220,19 @@ input {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-top: 1px solid #2727273b;
+  border-top: 1px solid #1413013b;
 }
 
+.single-booking:first-child {
+  border-top: none;
+
+}
 .room-title {
   text-transform:capitalize;
   font-size: 20px;
   font-weight: bold;
   padding-left: 4px;
+  margin: 0;
 }
 
 .room-tags {
@@ -213,7 +242,7 @@ input {
 }
 
 .room-tag {
-  background-color: #C0C0C0;
+  background-color: #B7B5B3;
   height: 20px;
   font-size: 14px;
   font-weight: bold;
@@ -222,18 +251,21 @@ input {
   padding-right: 10px;
   display: flex;
   align-items: center;
+  margin: 0;
 }
 
 .room-info {
   display: flex;
   flex-direction: column;
   align-items: end;
-  gap: 6px;
+  gap: 5px;
 }
 
 .room-info-text {
   font-size: 20px;
+  margin: 0;
   margin-right: 4px;
+
 }
 
 .booking-stats-card {
@@ -242,12 +274,13 @@ input {
 }
 
 .booking-stats-card h2 {
-  border-bottom: 1px solid #2727273b;
+  border-bottom: 1px solid #1413013b;
   padding-bottom: 16px;
 }
 
 .all-rooms-total {
-  font-size: 52px;
+  font-size: 48px;
+  margin: 0;
 }
 
 .widget {
@@ -263,7 +296,7 @@ input {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #27272720;
+  background: #14130120;
 }
 
 .hidden {
